--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +8,51 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-        <div class="main">
-            <nav>
-                <span class="logo">
-                    <img width="100" src="assets/logo.svg" alt="Netflix Logo">
-                </span>
-                <div class="buttons">
-                    <button class="b1">English</button>
-                    <button class="b2">Sign In</button>
-                </div>
-            </nav>
-            <div class="box"></div>
-            <div class="hero">
-                    <span>Unlimited movies, TV</span>
-                    <span>shows and more</span>
-                    <span>Starts at ₹149. Cancel at any time.</span>
-                    <span>Ready to watch? Enter your email to create or restart your membership.</span>
-                    <div class="input">
-                        <input type="email" placeholder="Email address">
-                        <button class="b3">Get Started</button>
-                    </div>
+    <div class="main">
+        <nav>
+            <span class="logo">
+                <img width="100" src="assets/logo.svg" alt="Netflix Logo">
+            </span>
+            <div class="buttons">
+                <button class="b1">English</button>
+                <button class="b2">Sign In</button>
+            </div>
+        </nav>
+        <div class="box"></div>
+        <div class="hero">
+            <span>Unlimited movies, TV</span>
+            <span>shows and more</span>
+            <span>Starts at ₹149. Cancel at any time.</span>
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div class="input">
+                <input type="email" placeholder="Email address">
+                <button class="b3">Get Started</button>
             </div>
         </div>
+        <div class="separator">
+            <svg viewBox="0 0 1920 150" width="100%" height="150" preserveAspectRatio="none">
+                <path d="M0,40 Q960,150 1920,40 L1920,0 L0,0 Z" fill="#0a1020" />
+                <path d="M0,40 Q960,150 1920,40" fill="none" stroke="url(#gradient)" stroke-width="6" />
+                <defs>
+                    <linearGradient id="gradient" x1="0" y1="0" x2="1" y2="0">
+                        <stop offset="0%" stop-color="#ff005a" />
+                        <stop offset="100%" stop-color="#ff5fca" />
+                    </linearGradient>
+                </defs>
+            </svg>
+        </div>
+    </div>
 
 
-        
-        
+
+
 
 
 </body>
+
 </html>
