--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
             </div>
         </div>
         <div class="separator">
-            <svg viewBox="0 0 1920 150" width="100%" height="150" preserveAspectRatio="none">
-                <path d="M0,40 Q960,150 1920,40 L1920,0 L0,0 Z" fill="#0a1020" />
-                <path d="M0,40 Q960,150 1920,40" fill="none" stroke="url(#gradient)" stroke-width="6" />
+            <svg viewBox="0 0 1920 150" preserveAspectRatio="none">
                 <defs>
-                    <linearGradient id="gradient" x1="0" y1="0" x2="1" y2="0">
+                    <linearGradient id="strokeGradient" x1="0" y1="0" x2="1" y2="0">
                         <stop offset="0%" stop-color="#ff005a" />
                         <stop offset="100%" stop-color="#ff5fca" />
+                    </linearGradient> 
+                    <linearGradient id="bgGradient" x1="0" y1="0" x2="0" y2="1">
+                        <stop offset="0%" stop-color="#0a1020" />
+                        <stop offset="100%" stop-color="#000000" />
                     </linearGradient>
                 </defs>
+                <path d="M0,60 Q960,0 1920,60 L1920,150 L0,150 Z" fill="url(#bgGradient)" />
+                <path d="M0,60 Q960,0 1920,60" fill="none" stroke="url(#strokeGradient)" stroke-width="6" />
             </svg>
         </div>
     </div>
