--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span>Starts at ₹149. Cancel at any time.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="input">
-                <input type="email" placeholder="Email address">
+                <input class="em" type="email" placeholder="Email address">
                 <button class="b3">Get Started</button>
             </div>
         </div>
