--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                 <img width="100" src="assets/logo.svg" alt="Netflix Logo">
             </span>
             <div class="buttons">
-                <button class="b1">English</button>
+                <select class="b1" name="Language" id="Language">
+                    <option value="English">English</option>
+                    <option value="Hindi">हिंदी</option>
+                </select>
                 <button class="b2">Sign In</button>
             </div>
         </nav>
