Modify get started

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="input">
                 <input class="em" type="email" placeholder="Email address">
-                <button class="b3">Get Started</button>
+                <button class="b3">Get Started &gt;</button>
             </div>
         </div>
         <div class="separator">
