Add html for trending now

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <linearGradient id="strokeGradient" x1="0" y1="0" x2="1" y2="0">
                         <stop offset="0%" stop-color="#ff005a" />
                         <stop offset="100%" stop-color="#ff5fca" />
-                    </linearGradient> 
+                    </linearGradient>
                     <linearGradient id="bgGradient" x1="0" y1="0" x2="0" y2="1">
                         <stop offset="0%" stop-color="#0a1020" />
                         <stop offset="100%" stop-color="#000000" />
@@ -54,6 +54,27 @@
             </svg>
         </div>
     </div>
+    <section class="trending">
+        <h2>Trending Now</h2>
+        <div class="trending-row">
+            <div class="card">
+                <img src="/assets/pictures/raina nadu.webp" alt="Rana Naidu">
+                <span class="rank">1</span>
+            </div>
+            <div class="card">
+                <img src="assets/pictures/jatt.webp" alt="Jaat">
+                <span class="rank">2</span>
+            </div>
+            <div class="card">
+                <img src="assets/pictures/hit.webp" alt="Hit - The Third Case">
+                <span class="rank">3</span>
+            </div>
+            <div class="card">
+                <img src="assets/pictures/chava.webp" alt="Chhaava">
+                <span class="rank">4</span>
+            </div>
+        </div>
+    </section>
 
 
 
