Add FAQ section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </svg>
         </div>
     </div>
+
     <section class="trending">
         <h2>Trending Now</h2>
         <div class="trending-row">
@@ -75,6 +76,7 @@
             </div>
         </div>
     </section>
+
     <section class="reasons">
         <h2>More reasons to join</h2>
         <div class="reason-cards">
@@ -96,6 +98,15 @@
                     your membership.</p>
             </div>
         </div>
+    </section>
+
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-item">What is Netflix?</div>
+        <div class="faq-item">How much does Netflix cost?</div>
+        <div class="faq-item">Where can I watch?</div>
+        <div class="faq-item">How do I cancel?</div>
+        <div class="faq-item">What can I watch on Netflix?</div>
     </section>
 
 
