--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
         <div class="faq-item">What can I watch on Netflix?</div>
     </section>
 
+    <footer class="footer">
+        <p>Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="footer-input">
+            <input type="email" placeholder="Email address">
+            <button>Get Started &gt;</button>
+        </div>
+        <p>Questions? Call <a href="tel:000-800-919-1743">000-800-919-1743</a></p>
+        <ul class="footer-links">
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Help Centre</a></li>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Media Centre</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Cookie Preferences</a></li>
+            <li><a href="#">Legal Notices</a></li>
+            <li><a href="#">Only on Netflix</a></li>
+        </ul>
+    </footer>
+
 
 
 
