--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
                 <img src="assets/pictures/chava.webp" alt="Chhaava">
                 <span class="rank">4</span>
             </div>
+            <div class="card">
+                <img src="assets/pictures/retro.webp" alt="Retro">
+                <span class="rank">5</span>
+            </div>
+            <div class="card">
+                <img src="assets/pictures/royals.webp" alt="Royals">
+                <span class="rank">6</span>
+            </div>
+            <div class="card">
+                <img src="assets/pictures/sikandae.webp" alt="Sikandar">
+                <span class="rank">7</span>
+            </div>
         </div>
     </section>
 
